@startuml
hide circle
skinparam linetype ortho
title RotaClara — Modelo de persistência
entity gerente {
  *id : INTEGER <<PK>>
--
nome : TEXT
telefone : TEXT
email : TEXT <<UNIQUE>>
}
entity motorista {
  *id : INTEGER <<PK>>
--
gerente_id : INTEGER <<FK>>
nome : TEXT
telefone : TEXT
documento : TEXT <<UNIQUE>>
veiculo : TEXT
km_por_litro : REAL
}
entity roteiro {
  *id : INTEGER <<PK>>
--
data : TEXT
motorista_id : INTEGER <<FK>>
distancia_total : REAL
tempo_total_parado : REAL
custo_estimado : REAL
status : TEXT
valor_combustivel : REAL
km_por_litro : REAL
custo_por_km : REAL
jornada_padrao_horas : REAL
}
entity ponto {
  *id : INTEGER <<PK>>
--
roteiro_id : INTEGER <<FK>>
endereco : TEXT
latitude : REAL
longitude : REAL
data_hora_chegada : TEXT?
data_hora_saida : TEXT?
tempo_parado_minutos : REAL
ordem_sequencial : INTEGER
}
entity parametro {
  *id : INTEGER <<PK, singleton>>
--
valor_combustivel : REAL
km_por_litro : REAL
custo_por_km : REAL
jornada_padrao_horas : REAL
excluir_partida : INTEGER
regra_calculo : TEXT
}
entity usuario {
  *id : INTEGER <<PK>>
--
login : TEXT <<UNIQUE>>
senha_hash : TEXT
perfil : TEXT
motorista_id : INTEGER? <<FK>>
gerente_id : INTEGER? <<FK>>
}
entity sessao {
  *token_hash : TEXT <<PK>>
--
usuario_id : INTEGER <<FK>>
expira : REAL
}
entity auditoria {
  *id : INTEGER <<PK>>
--
usuario_id : INTEGER <<FK>>
ponto_id : INTEGER? <<FK>>
instante : TEXT
acao : TEXT
antes : TEXT
depois : TEXT
motivo : TEXT
}
gerente ||--o{ motorista
motorista ||--o{ roteiro
roteiro ||--|{ ponto
motorista |o--o| usuario
gerente |o--o| usuario
usuario ||--o{ sessao
usuario ||--o{ auditoria
ponto |o--o{ auditoria
note right of parametro
  Valores copiados para roteiro na criação.
  Não existe FK para evitar alterar o passado.
end note
@enduml
